[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gonzales"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "*"
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
piston_window = "0.123.0"
rand = "*"